# codeshaper

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  pull_request.md
.github/workflows/: ci.yml  quality.yml
app/: main.py
app/api/: dependencies.py  routes.py
app/core/: config.py  exceptions.py
app/schemas/: review.py
app/services/: llm_client.py  reviewer.py
app/static/: index.html
app/static/js/: app.js
deployment/: .env.example  docker-compose.dev.yml  docker-compose.prod.yml  nginx.conf  prometheus.yml
docs/: ARCHITECTURE.md  CI_CD.md  DEPLOYMENT.md
tests/: test_api.py
